build_error_win2.txt
warning: unused manifest key: build-dependencies.pkg-config.members
warning: unused manifest key: build-dependencies.pkg-config.resolver
   Compiling rustix v1.1.2
    Checking wayland-sys v0.31.7
    Checking windows-sys v0.48.0
   Compiling bytemuck_derive v1.10.2
   Compiling tracing-attributes v0.1.31
   Compiling khronos_api v3.1.0
    Checking drm-sys v0.8.0
    Checking rustix v0.38.44
   Compiling libudev-sys v0.1.4
   Compiling io-lifetimes v1.0.11
    Checking tracing-core v0.1.36
   Compiling libseat-sys v0.2.0
   Compiling cfg_aliases v0.2.1
   Compiling thiserror v1.0.69
   Compiling input-sys v1.18.0
   Compiling pixman-sys v0.1.0
error[E0433]: failed to resolve: could not find `unix` in `os`
 --> C:\Users\Z1529\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\wayland-sys-0.31.7\src\common.rs:4:14
  |
4 | use std::os::unix::io::RawFd;
  |              ^^^^ could not find `unix` in `os`
  |
note: found an item that was configured out
 --> /rustc/29483883eed69d5fb4db01964cdf2af4d86e9cb2\library\std\src\os\mod.rs:36:9
note: the item is gated here
 --> /rustc/29483883eed69d5fb4db01964cdf2af4d86e9cb2\library\std\src\os\mod.rs:28:1
note: found an item that was configured out
 --> /rustc/29483883eed69d5fb4db01964cdf2af4d86e9cb2\library\std\src\os\mod.rs:85:9
note: the item is gated here
 --> /rustc/29483883eed69d5fb4db01964cdf2af4d86e9cb2\library\std\src\os\mod.rs:84:1

For more information about this error, try `rustc --explain E0433`.
error: could not compile `wayland-sys` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
error[E0425]: cannot find value `O_CLOEXEC` in crate `libc`
  --> C:\Users\Z1529\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\drm-sys-0.8.0\src\lib.rs:19:40
   |
19 |     pub const DRM_CLOEXEC: u32 = libc::O_CLOEXEC as u32;
   |                                        ^^^^^^^^^ not found in `libc`

error: failed to run custom build command for `libudev-sys v0.1.4`

Caused by:
  process didn't exit successfully: `C:\Users\Z1529\.gemini\antigravity\scratch\smithay-universal\target\debug\build\libudev-sys-50515095c721b652\build-script-build` (exit code: 101)
  --- stdout
  cargo:rerun-if-env-changed=LIBUDEV_NO_PKG_CONFIG
  cargo:rerun-if-env-changed=PKG_CONFIG_x86_64-pc-windows-msvc
  cargo:rerun-if-env-changed=PKG_CONFIG_x86_64_pc_windows_msvc
  cargo:rerun-if-env-changed=HOST_PKG_CONFIG
  cargo:rerun-if-env-changed=PKG_CONFIG
  cargo:rerun-if-env-changed=LIBUDEV_STATIC
  cargo:rerun-if-env-changed=LIBUDEV_DYNAMIC
  cargo:rerun-if-env-changed=PKG_CONFIG_ALL_STATIC
  cargo:rerun-if-env-changed=PKG_CONFIG_ALL_DYNAMIC
  cargo:rerun-if-env-changed=PKG_CONFIG_PATH_x86_64-pc-windows-msvc
  cargo:rerun-if-env-changed=PKG_CONFIG_PATH_x86_64_pc_windows_msvc
  cargo:rerun-if-env-changed=HOST_PKG_CONFIG_PATH
  cargo:rerun-if-env-changed=PKG_CONFIG_PATH
  cargo:rerun-if-env-changed=PKG_CONFIG_LIBDIR_x86_64-pc-windows-msvc
  cargo:rerun-if-env-changed=PKG_CONFIG_LIBDIR_x86_64_pc_windows_msvc
  cargo:rerun-if-env-changed=HOST_PKG_CONFIG_LIBDIR
  cargo:rerun-if-env-changed=PKG_CONFIG_LIBDIR
  cargo:rerun-if-env-changed=PKG_CONFIG_SYSROOT_DIR_x86_64-pc-windows-msvc
  cargo:rerun-if-env-changed=PKG_CONFIG_SYSROOT_DIR_x86_64_pc_windows_msvc
  cargo:rerun-if-env-changed=HOST_PKG_CONFIG_SYSROOT_DIR
  cargo:rerun-if-env-changed=PKG_CONFIG_SYSROOT_DIR
  cargo:rerun-if-env-changed=LIBUDEV_STATIC
  cargo:rerun-if-env-changed=LIBUDEV_DYNAMIC
  cargo:rerun-if-env-changed=PKG_CONFIG_ALL_STATIC
  cargo:rerun-if-env-changed=PKG_CONFIG_ALL_DYNAMIC
  cargo:rerun-if-env-changed=PKG_CONFIG_PATH_x86_64-pc-windows-msvc
  cargo:rerun-if-env-changed=PKG_CONFIG_PATH_x86_64_pc_windows_msvc
  cargo:rerun-if-env-changed=HOST_PKG_CONFIG_PATH
  cargo:rerun-if-env-changed=PKG_CONFIG_PATH
  cargo:rerun-if-env-changed=PKG_CONFIG_LIBDIR_x86_64-pc-windows-msvc
  cargo:rerun-if-env-changed=PKG_CONFIG_LIBDIR_x86_64_pc_windows_msvc
  cargo:rerun-if-env-changed=HOST_PKG_CONFIG_LIBDIR
  cargo:rerun-if-env-changed=PKG_CONFIG_LIBDIR
  cargo:rerun-if-env-changed=PKG_CONFIG_SYSROOT_DIR_x86_64-pc-windows-msvc
  cargo:rerun-if-env-changed=PKG_CONFIG_SYSROOT_DIR_x86_64_pc_windows_msvc
  cargo:rerun-if-env-changed=HOST_PKG_CONFIG_SYSROOT_DIR
  cargo:rerun-if-env-changed=PKG_CONFIG_SYSROOT_DIR

  --- stderr

  thread 'main' panicked at C:\Users\Z1529\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\libudev-sys-0.1.4\build.rs:38:41:
  called `Result::unwrap()` on an `Err` value: "Could not run `PKG_CONFIG_ALLOW_SYSTEM_LIBS=1 PKG_CONFIG_ALLOW_SYSTEM_CFLAGS=1 pkg-config --libs --cflags libudev`\nThe pkg-config command could not be found.\n\nMost likely, you need to install a pkg-config package for your OS.\n\nIf you've already installed it, ensure the pkg-config command is one of the\ndirectories in the PATH environment variable.\n\nIf you did not expect this build to link to a pre-installed system library,\nthen check documentation of the libudev-sys crate for an option to\nbuild the library from source, or disable features or dependencies\nthat require pkg-config."
  note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
For more information about this error, try `rustc --explain E0425`.
error: could not compile `drm-sys` (lib) due to 1 previous error
